[gd_scene load_steps=51 format=3 uid="uid://ct31rbvjefjs6"]

[ext_resource type="Script" path="res://Scenes/Player_Systems/HUD/cd_frame.gd" id="1_5lqy6"]
[ext_resource type="Texture2D" uid="uid://t8k3v2qmoxic" path="res://Graphics/UI/CD_Overlay_SM_4x.png" id="1_styug"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cl4ol"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqi1c"]
atlas = ExtResource("1_styug")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1lx7"]
atlas = ExtResource("1_styug")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_87aq8"]
atlas = ExtResource("1_styug")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjxsg"]
atlas = ExtResource("1_styug")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2w8q"]
atlas = ExtResource("1_styug")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7r3h"]
atlas = ExtResource("1_styug")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kumw5"]
atlas = ExtResource("1_styug")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob0as"]
atlas = ExtResource("1_styug")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_65kdk"]
atlas = ExtResource("1_styug")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_estmb"]
atlas = ExtResource("1_styug")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2hqt"]
atlas = ExtResource("1_styug")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6lqb"]
atlas = ExtResource("1_styug")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiy0n"]
atlas = ExtResource("1_styug")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve5hw"]
atlas = ExtResource("1_styug")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tns4"]
atlas = ExtResource("1_styug")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6cwq"]
atlas = ExtResource("1_styug")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpgs5"]
atlas = ExtResource("1_styug")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfj5c"]
atlas = ExtResource("1_styug")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw0so"]
atlas = ExtResource("1_styug")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b03op"]
atlas = ExtResource("1_styug")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5ktc"]
atlas = ExtResource("1_styug")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg2jx"]
atlas = ExtResource("1_styug")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4dgi"]
atlas = ExtResource("1_styug")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t7k1"]
atlas = ExtResource("1_styug")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0um0g"]
atlas = ExtResource("1_styug")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_57x20"]
atlas = ExtResource("1_styug")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucggp"]
atlas = ExtResource("1_styug")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxvre"]
atlas = ExtResource("1_styug")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2t1b"]
atlas = ExtResource("1_styug")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yscbn"]
atlas = ExtResource("1_styug")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cso14"]
atlas = ExtResource("1_styug")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwcw8"]
atlas = ExtResource("1_styug")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7igfd"]
atlas = ExtResource("1_styug")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf0ju"]
atlas = ExtResource("1_styug")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5yb5"]
atlas = ExtResource("1_styug")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_scu0m"]
atlas = ExtResource("1_styug")
region = Rect2(0, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tlgc"]
atlas = ExtResource("1_styug")
region = Rect2(64, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fl83"]
atlas = ExtResource("1_styug")
region = Rect2(128, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkef4"]
atlas = ExtResource("1_styug")
region = Rect2(192, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xny6"]
atlas = ExtResource("1_styug")
region = Rect2(0, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2uso"]
atlas = ExtResource("1_styug")
region = Rect2(64, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyu0x"]
atlas = ExtResource("1_styug")
region = Rect2(128, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3ci3"]
atlas = ExtResource("1_styug")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jcdd"]
atlas = ExtResource("1_styug")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_anq5p"]
atlas = ExtResource("1_styug")
region = Rect2(64, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ookx0"]
atlas = ExtResource("1_styug")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_0b56a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqi1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1lx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87aq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjxsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2w8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7r3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kumw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob0as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65kdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_estmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2hqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6lqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiy0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve5hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tns4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6cwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpgs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfj5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw0so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b03op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5ktc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg2jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4dgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t7k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0um0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57x20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucggp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxvre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2t1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yscbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cso14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwcw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7igfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf0ju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5yb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scu0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tlgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fl83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkef4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xny6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2uso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyu0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3ci3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jcdd")
}, {
"duration": 0.01,
"texture": SubResource("AtlasTexture_anq5p")
}],
"loop": false,
"name": &"COOLDOWN",
"speed": 45.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ookx0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CD_Frame" type="PanelContainer"]
custom_minimum_size = Vector2(16, 16)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_cl4ol")
script = ExtResource("1_5lqy6")

[node name="S2D_AB_ICON" type="Sprite2D" parent="."]
light_mask = 16
visibility_layer = 16
centered = false

[node name="S2D_CD_Frame" type="AnimatedSprite2D" parent="."]
light_mask = 16
visibility_layer = 16
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_0b56a")
frame_progress = 0.033137
centered = false

[connection signal="animation_finished" from="S2D_CD_Frame" to="." method="_on_cd_animation_finished"]
